--- a/seller_app/templates/seller/_layout.html
+++ b/seller_app/templates/seller/_layout.html
@@ -30,13 +30,19 @@
 
   <body>
     {% block header %}{% endblock %}
-
     {% block content %}{% endblock %}
-
     {% block footer %}{% endblock %}
   </body>
 
   <script src="{% static 'seller/node_modules/bootstrap/dist/js/bootstrap.min.js' %}"></script>
+  <script src="{% static 'seller/node_modules/htmx.org/dist/htmx.min.js' %}"></script>
+
+  {% csrf_token %}
+  <script>
+    document.body.addEventListener('htmx:configRequest', (event) => {
+        event.detail.headers['X-CSRFToken'] = '{{ csrf_token }}';
+    })
+  </script>
 
   {% block js %}{% endblock %}
 </html>
