--- a/seller_app/templates/seller/components/header.html
+++ b/seller_app/templates/seller/components/header.html
@@ -81,7 +81,7 @@
 
       <button hx-post="{% url 'seller:logout' %}"
               hx-push-url="{% url 'seller:login' %}"
-              hx-target='closest body'>Logout</button>
+              hx-target='body'>Logout</button>
     </div>
   </div>
 </header>
