--- a/public_app/templates/public/_layout.html
+++ b/public_app/templates/public/_layout.html
@@ -30,13 +30,13 @@
 
   <body>
     {% block header %}
-      {% include "public/components/header.html" %}
+      {% include "public/partials/header.html" %}
     {% endblock %}
 
     {% block content %}{% endblock %}
 
     {% block footer %}
-      {% include "public/components/footer.html" %}
+      {% include "public/partials/footer.html" %}
     {% endblock %}
   </body>
 
