--- a/seller_app/templates/seller/index.html
+++ b/seller_app/templates/seller/index.html
@@ -1,9 +1,9 @@
 {% extends 'seller/_layout.html' %}
 
 {% block header %}
-  {% include "seller/components/header.html" %}
+  {% include "seller/partials/header.html" %}
 {% endblock header %}
 
 {% block content %}
-  {% include "seller/components/reports_list.html" %}
+  {% include "seller/partials/reports_list.html" %}
 {% endblock %}
