reports list and modal

--- a/public_app/templates/public/partials/header.html
+++ b/public_app/templates/public/partials/header.html
@@ -6,9 +6,11 @@
       <a href="/">
         <img src="{% static 'public/images/logo.png' %}"
              alt="my company"
-             width="300px"
-             height="80px" />
+             width="80px" />
       </a>
     </div>
+    <ul class="mr-10">
+      <li>Home</li>
+    </ul>
   </nav>
 </header>
