--- a/seller_app/templates/seller/_layout.html
+++ b/seller_app/templates/seller/_layout.html
@@ -18,12 +18,15 @@
           href="{% static 'seller/apple-touch-icon.png' %}">
 
     <title>
-      Seller
+      Seller App
       {% block title %}{% endblock %}
     </title>
 
     <link href="{% static 'seller/node_modules/bootstrap/dist/css/bootstrap.min.css' %}"
           rel="stylesheet">
+    <link href="{% static 'seller/node_modules/bootstrap-icons/font/bootstrap-icons.min.css' %}"
+          rel="stylesheet">
+    <link href="{% static 'seller/css/seller.css' %}" rel="stylesheet">
 
     {% block css %}{% endblock %}
   </head>
@@ -34,6 +37,7 @@
     {% block footer %}{% endblock %}
   </body>
 
+  <script src="{% static 'seller/node_modules/@popperjs/core/dist/umd/popper.min.js' %}"></script>
   <script src="{% static 'seller/node_modules/bootstrap/dist/js/bootstrap.min.js' %}"></script>
   <script src="{% static 'seller/node_modules/htmx.org/dist/htmx.min.js' %}"></script>
 
@@ -41,6 +45,24 @@
   <script>
     document.body.addEventListener('htmx:configRequest', (event) => {
         event.detail.headers['X-CSRFToken'] = '{{ csrf_token }}';
+    })
+
+    const modal = new bootstrap.Modal(document.getElementById("modal"))
+    htmx.on("htmx:afterSwap", (e) => {
+      // Response targeting #dialog => show the modal
+      if (e.detail.target.id == "dialog") {
+        modal.show()
+      }
+    })
+    htmx.on("htmx:beforeSwap", (e) => {
+      // Empty response targeting #dialog => hide the modal
+      if (e.detail.target.id == "dialog" && !e.detail.xhr.response) {
+        modal.hide()
+        e.detail.shouldSwap = false
+      }
+    })
+    htmx.on("hidden.bs.modal", () => {
+      document.getElementById("dialog").innerHTML = ""
     })
   </script>
 
